--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<h1 style="color: #5e9ca0;">Welcome to Covid Tech</h1>
-<p style="color: #2e6c80;">We are a community of university engineers, clinicians &amp; volunteers who are developing open technological solutions to support us all in the fight against Covid-19 (Coronavirus).</p>
-<p>&nbsp;</p>
-<p style="color: #2e6c80;">We are collecting here open software/hardware/procedural data that you may find helpful. The files presented here may include part lists, order forms, 3D printing templates, blue prints, code for computer or microcontrollers or similar</p>
-<ol style="list-style: none; font-size: 14px; line-height: 32px; font-weight: bold;">
-<li style="clear: both;">
-<p><img style="float: left;" src="https://html-online.com/img/01-interactive-connection.png" alt="interactive connection" width="45" /> Social Distancing Tools</p>
-</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/02-html-clean.png" alt="html cleaner" width="45" />Cleaning/Sterilisation/Sanitiser productions</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/04-replace.png" alt="replace text" width="45" />Protective gear (face visors, protective masks, etc)</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/05-gibberish.png" alt="gibberish" width="45" /> Ventilators</li>
-<li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/6-table-div-html.png" alt="html table div" width="45" />Clinical Processes</li>
-</ol>
-<p>&nbsp;</p>
-<p>In general, all the documents are provided as is, without any implied liability or responsibility for operation, human health and safety. The technology is not (at the moment at least) validated medical devices or medical treatments, and are provided only to facilitate the exchange of ideas and academic designs.</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Covid Tech</title>
+</head>
+  
+<body>
+  <h1 style="color: #5e9ca0;">Welcome to Covid Tech</h1>
+  <p style="color: #2e6c80;">We are a community of university engineers, clinicians &amp; volunteers who are developing open technological solutions to support us all in the fight against Covid-19 (Coronavirus).</p>
+  <p>&nbsp;</p>
+  <p style="color: #2e6c80;">We are collecting here open software/hardware/procedural data that you may find helpful. The files presented here may include part lists, order forms, 3D printing templates, blue prints, code for computer or microcontrollers or similar</p>
+  <ol style="list-style: none; font-size: 14px; line-height: 32px; font-weight: bold;">
+  <li style="clear: both;">
+  <p><img style="float: left;" src="https://html-online.com/img/01-interactive-connection.png" alt="interactive connection" width="45" /> Social Distancing Tools</p>
+  </li>
+  <li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/02-html-clean.png" alt="html cleaner" width="45" />Cleaning/Sterilisation/Sanitiser productions</li>
+  <li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/04-replace.png" alt="replace text" width="45" />Protective gear (face visors, protective masks, etc)</li>
+  <li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/05-gibberish.png" alt="gibberish" width="45" /> Ventilators</li>
+  <li style="clear: both;"><img style="float: left;" src="https://html-online.com/img/6-table-div-html.png" alt="html table div" width="45" />Clinical Processes</li>
+  </ol>
+  <p>&nbsp;</p>
+  <p>In general, all the documents are provided as is, without any implied liability or responsibility for operation, human health and safety. The technology is not (at the moment at least) validated medical devices or medical treatments, and are provided only to facilitate the exchange of ideas and academic designs.</p>
+</body>
+</html>
+
+
